--- a/injected/src/sass/_lists.scss
+++ b/injected/src/sass/_lists.scss
@@ -80,6 +80,7 @@
 .bookmark-list__container {
   display: flex;
   flex-direction: column;
+  flex-grow: 10;
 }
 
 .bookmark__list-is_empty {
@@ -90,6 +91,7 @@
 
 .bookmark-list {
   margin-bottom: 0;
+  height: 100%;
 }
 
 .bookmark {
